<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/rowsEditText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:hint="Number of rows"
            android:inputType="numberSigned"
            android:padding="8dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/columnsEditText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginRight="10dp"
            android:hint="Number of columns"
            android:inputType="numberSigned"
            android:padding="8dp"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>