<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".app.MainFragmentActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        android:elevation="10dp"
        android:layout_weight="1.5" >

        <TextView
            android:id="@+id/shortestPathLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/the_shortest_path"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="21sp"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/succesLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/success"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/successTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/succesLabelTextView"
            android:layout_alignTop="@+id/succesLabelTextView"
            android:layout_marginStart="5dp"
            android:text="@string/yes"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/distanceLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/succesLabelTextView"
            android:layout_alignStart="@+id/succesLabelTextView"
            android:layout_marginTop="5dp"
            android:text="@string/cost"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/distanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/distanceLabelTextView"
            android:layout_alignStart="@+id/successTextView"
            android:layout_alignTop="@id/distanceLabelTextView"
            android:text="0"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/rowSequenceLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/distanceLabelTextView"
            android:layout_alignStart="@id/distanceLabelTextView"
            android:layout_marginTop="5dp"
            android:text="@string/row_secuence"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/rowSequenceTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/rowSequenceLabelTextView"
            android:layout_alignStart="@id/rowSequenceLabelTextView"
            android:text="[1, 3, 4]"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:visibility="gone"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/hintTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/press_add_button_to_continue"
        android:textColor="@android:color/darker_gray"
        android:textSize="21sp"/>

    <TextView
        android:id="@+id/positionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="[0, 0]"
        android:textColor="@android:color/darker_gray"
        android:textSize="21sp"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/mazeEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:inputType="textMultiLine"
        android:gravity="center"
        android:enabled="false"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/startFloatingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            app:backgroundTint="@color/selector_tint_application_floating_button"
            android:layout_margin="@dimen/floatingActionButton_margin"
            android:src="@drawable/ic_play_white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/mazeSizeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:textSize="21sp"
                android:text="@string/maze_size_label"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/mazeSizeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="21sp"
                android:text="0x0"
                android:visibility="invisible"/>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addFloatingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            app:backgroundTint="@color/selector_tint_application_floating_button"
            android:layout_margin="@dimen/floatingActionButton_margin"
            android:src="@drawable/ic_add_white" />

    </RelativeLayout>

    <com.shortestpath.app.keyboard.NumericKeyboardView
        android:id="@+id/numericKeyboardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:keyBackground="@color/colorKeyboard"
        android:focusableInTouchMode="true"
        android:visibility="gone" />

</LinearLayout>
